k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: threat-hunting
  labels:
    name: threat-hunting
    environment: production
